# tftp-client

./: .gitignore  README.md
download/: 1.txt  read.txt
log/: log.txt
server/: 2.txt  read.txt
src/: CMakeLists.txt  client.cpp  filepaths.cpp  main.cpp  main.h
src/backend/: go.mod  log.go  main.go  porcesser.go  tftp.go
src/backend/cpp/: CMakeLists.txt  client.h  logger.cpp  logger.h  myTimer.cpp  myTimer.h
src/cpp/: CMakeLists.txt  client.cpp  client.h  filepaths.cpp  logger.cpp  logger.h  main.cpp  main.h
src/frontend/: client.html
upload/: a.txt  num.txt
